# TranslatorGPT

./: README.md  UPDATE_LOG.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.txt  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/css/: main-variables.scss  styles.scss
src/assets/data/: default_config.js  default_settings.js  engine_names.js  language_names.js  prompts.js  system_language.js
src/assets/fonts/: iconfont.css  iconfont.js  iconfont.json
src/components/: ConfigSelector.vue
src/requests/: proofread.js  result_handler.js  translate.js
src/utils/: ban_default_shortcuts.js  deep_copy.js  generate_language_options.js  get_selected_text.js  ocr.js  result_formatter.js  show_window.js  sleep.js  stream.js  test_api_keys.js  translate_func.js
src/windows/index/: App.vue
src/windows/index/components/: Settings.vue
src/windows/index/pages/proofreader/: Proofreader.vue
src/windows/index/pages/translator/: Header.vue  Translator.vue
src/windows/screenshot/: App.vue
src/windows/suspended/: App.vue
src/windows/suspended/components/: Header.vue  Main.vue
windows/index/: index.html  main.js  router.js  store.js
windows/screenshot/: index.html  main.js
windows/suspended/: index.html  main.js
